[package]
name = "silk-cli"
version = "1.0.0"
edition = "2021"
description = "Tencent SILK codec"
keywords = ["cli", "silk", "tool", "codec"]
categories = ["command-line-utilities"]
license = "MIT"
repository = "https://github.com/idanran/silk-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap={ version="4.5.13", features=["derive"] }
silk-rs="0.2.0"
bytes="1.7.1"

[profile.release]
opt-level = 's'
lto = true
codegen-units = 1
strip = "debuginfo"